log/build_2022-03-23_13-53-45/dbr_pubsub/stderr.log
  File "/home/nayab/dev_ws/install/dbr_pubsub/lib/python3.8/site-packages/dbr_pubsub/rc_data_emu.py", line 26
    self.vcmd_sub_      =self.create_subscription(VehicleCommand 'vcmd', self.vcmd_callback, 10)
                                                                 ^
SyntaxError: invalid syntax

